Updated path to images

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -24,15 +24,15 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
+    "      <img src=\"./chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/person96_bacteria_464.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "      <img src=\"./chestxraydemo/person96_bacteria_464.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
-    "        <img src=\"chestxraydemo/viral.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "        <img src=\"./chestxraydemo/viral.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "      <figcaption>(3) Viral Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "</tr>\n",
@@ -217,15 +217,15 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/transformed (2).png\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
+    "      <img src=\"./chestxraydemo/transformed (2).png\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
     "        <figcaption>No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/transformed_1.png\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "      <img src=\"./chestxraydemo/transformed_1.png\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "        <figcaption>Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
-    "        <img src=\"chestxraydemo/transformed (3).png\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "        <img src=\"./chestxraydemo/transformed (3).png\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "      <figcaption>Viral Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "</tr>\n",
@@ -440,7 +440,7 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/1LayerAcc.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/1LayerAcc.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Validation Accuracy of 1 Layer Model with Adam Optimizer</figcaption>\n",
     "    </figure></td>\n",
     "</tr>\n",
@@ -451,7 +451,7 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/3Layer.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/3Layer.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Validation Accuracy of 3 Layer Model with Adam Optimizer</figcaption>\n",
     "    </figure></td>\n",
     "</tr>\n",
@@ -462,7 +462,7 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/3LayerAcc2.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/3LayerAcc2.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Validation Accuracy of 3 Layer Model with SGD Optimizer</figcaption>\n",
     "    </figure></td>\n",
     "</tr>\n",
@@ -474,11 +474,11 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/AlexNet.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/AlexNet.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Validation Accuracy of AlexNet Model with Adam Optimizer</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/AlexNetLoss.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/AlexNetLoss.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Training Loss of AlexNet Model with Adam Optimizer</figcaption>\n",
     "    </figure></td>\n",
     "</tr>\n",
@@ -543,11 +543,11 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/ConfusionMatrix.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/ConfusionMatrix.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>Confusion matrix of final AlexNet model</figcaption>\n",
     "    </figure></td>\n",
     "        <td> <figure>\n",
-    "      <img src=\"chestxraydemo/metrics.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
+    "      <img src=\"./chestxraydemo/metrics.PNG\" alt=\"Pneumonia\" style=\"width: 400px;\"/> \n",
     "        <figcaption>AlexNet Metrics</figcaption>\n",
     "    </figure></td>\n",
     "</tr>\n",
