Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -24,15 +24,15 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"/chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
+    "      <img src=\"chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"./chestxraydemo/person96_bacteria_464.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "      <img src=\"chestxraydemo/person96_bacteria_464.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
-    "        <img src=\"./chestxraydemo/viral.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
+    "        <img src=\"chestxraydemo/viral.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/>\n",
     "      <figcaption>(3) Viral Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "</tr>\n",
