Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -24,7 +24,7 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"PneumoniaXrayClassification/chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
+    "      <img src=\"../PneumoniaXrayClassification/chestxraydemo/normal.jpeg\" alt=\"Pneumonia\" style=\"width: 200px;\"/> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
