Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -18,6 +18,7 @@
     "## Data:\n",
     "\n",
     "The data set can be viewed and downloaded through Kaggle at: https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia\n",
+    "![](\"chestxraydemo/normal.jpeg\")"
     "\n",
     "Each file in this set is a jpeg containing an xray of an individual. Each sample either has (1) no pneumonia (2) bacterial pneumonia or (3) viral pneumonia. Here is a side by side view of a sample from each class. \n",
     "\n",
