Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -28,7 +28,7 @@
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/person96_bacteria_464.jpeg\"  width= \"200px\"/>\n",
+    "      <img src=\"chestxraydemo\/person96_bacteria_464.jpeg\"  width= \"200px\"/>\n",
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
