Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -24,11 +24,11 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/normal.jpeg\" width= \"200px\"/> \n",
+    "      <img src=\"./chestxraydemo/normal.jpeg\" width= \"200px\"/> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/person96_bacteria_464.jpeg\"  width= \"200px\"/>\n",
+    "      <img src=\"./chestxraydemo/person96_bacteria_464.jpeg\"  width= \"200px\"/>\n",
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
