Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -32,7 +32,7 @@
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
-    "        <img src=\"chestxraydemo/viral.jpeg\"  width= \"200px\"/>\n",
+    "        <img src=\"./chestxraydemo/viral.jpeg\"  width= \"200px\"/>\n",
     "      <figcaption>(3) Viral Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "</tr>\n",
