Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -29,7 +29,7 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/normal.jpeg\" width= \"200px\"/> \n",
+    "      <img src=\"https://github.com/jpsmith003/PneumoniaXrayClassification/chestxraydemo/normal.jpeg\" width= \"200px\"/> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
