--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"chestxraydemo/normal.jpeg\" width= \"200px\"/>"
+    "<img src=\"chestxraydemo/normal.jpeg\" width=200px/>"
    ]
   },
   {
