Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"chestxraydemo/normal.jpeg\" />"
+    "<img width="400" height="400" src=\"chestxraydemo/normal.jpeg\" />"
    ]
   },
   {
