Update Chest Xray Modeling.ipynb

--- a/Chest Xray Modeling.ipynb
+++ b/Chest Xray Modeling.ipynb
@@ -29,11 +29,11 @@
     "<table>\n",
     "<tr>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/normal.jpeg\" width= \"200px\"/> \n",
+    "      <img width=\"200\" src=\"chestxraydemo/normal.jpeg\" /> \n",
     "      <figcaption>(1) No Pneumonia</figcaption>\n",
     "    </figure></td>\n",
     "    <td> <figure>\n",
-    "      <img src=\"chestxraydemo/person96_bacteria_464.jpeg\"  width= \"200px\"/>\n",
+    "      <img width=\"200\" src=\"chestxraydemo/person96_bacteria_464.jpeg\"/>\n",
     "      <figcaption>(2) Bacterial Pneumonia</figcaption>\n",
     "    </figure> </td>\n",
     "    <td> <figure>\n",
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width=\"200\" src=\"chestxraydemo/normal.jpeg\" />"
+    ""
    ]
   },
   {
